--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+datetime
+matplotlib
+numpy
 openpyxl
-streamlit==1.32.2
-pandas==2.2.0
-numpy==1.26.0
-plotly==5.18.0
+pandas
+plotly
+random
+streamlit
