--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-datetime
-matplotlib
-numpy
-openpyxl
-pandas
-plotly
-random
-streamlit
+matplotlib==3.9.2
+numpy==1.26.4
+openpyxl==3.1.5
+pandas==2.2.3
+plotly==5.24.1
+streamlit==1.37.1
